--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -102,7 +102,7 @@
         <button class="digit-button">0</button>
     </div>
     <button class="confirm-button">Confirmar</button>
-    <div class="success-message">Parabéns! Você conseguiu,pode abrir a caixa!</div>
+    <div class="success-message">Parabéns! Você conseguiu, pode abrir a caixa vermelha!</div>
 </div>
 
 <audio id="successSound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
