--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -3,140 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadeado com Senha por Cliques</title>
+    <title>Cadeado com Animações, Som e Erro</title>
     <style>
         body {
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f9f9f9;
-            font-family: Arial, sans-serif;
-        }
-
-        .welcome-message {
-            position: absolute;
-            top: 20px;
-            font-size: 24px;
-            color: #333;
+            background-color: #f2f2f2;
         }
 
         .lock-container {
+            position: relative;
             text-align: center;
         }
 
         .lock-image {
-            width: 150px;
+            width: 200px;
+            height: 300px;
+            background-image: url('https://i.postimg.cc/DW2Jgrwr/ei-1734134378903-removebg-preview.png');
+            background-size: contain;
+            background-repeat: no-repeat;
             margin-bottom: 20px;
+            transition: transform 0.2s;
         }
 
-        .button-container {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-        .digit-button {
-            width: 50px;
-            height: 50px;
-            font-size: 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .digit-button:hover {
-            background-color: #0056b3;
-        }
-
-        .confirm-button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .confirm-button:hover {
-            background-color: #1e7e34;
-        }
-
-        .success-message {
-            display: none;
-            font-size: 22px;
+        .dial {
+            width: 40px;
+            height: 60px;
+            background-color: #777;
+            display: inline-block;
+            margin: 0 5px;
+            text-align: center;
+            line-height: 60px;
+            font-size: 30px;
             font-weight: bold;
-            color: green;
-            margin-top: 20px;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
+        .message {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 20px;
+            color: #333;
+            opacity: 0;
+            animation: fadeIn 1s forwards;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        .celebration {
+            font-size: 24px;
+            color: green;
+            font-weight: bold;
+            opacity: 0;
+            animation: fadeInCelebration 2s forwards;
+        }
+
+        @keyframes fadeInCelebration {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        /* Animação de erro (vibração) */
         @keyframes shake {
-            0%, 100% { transform: translateX(0); }
+            0% { transform: translateX(0); }
             25% { transform: translateX(-10px); }
             50% { transform: translateX(10px); }
             75% { transform: translateX(-10px); }
+            100% { transform: translateX(0); }
         }
 
         .error {
-            animation: shake 0.5s;
+            animation: shake 0.5s ease-in-out;
         }
     </style>
 </head>
 <body>
 
-<div class="welcome-message">Olá Felipe!</div>
-
 <div class="lock-container">
-    <img class="lock-image" src="https://i.postimg.cc/DW2Jgrwr/ei-1734134378903-removebg-preview.png" alt="Cadeado fechado">
-    <div class="button-container">
-        <button class="digit-button">0</button>
-        <button class="digit-button">0</button>
-        <button class="digit-button">0</button>
-        <button class="digit-button">0</button>
+    <div class="lock-image"></div> <!-- Imagem do cadeado -->
+    <div>
+        <div class="dial"><span>0</span></div>
+        <div class="dial"><span>0</span></div>
+        <div class="dial"><span>0</span></div>
+        <div class="dial"><span>0</span></div>
     </div>
-    <button class="confirm-button">Confirmar</button>
-    <div class="success-message">Parabéns! Você conseguiu, pode abrir a caixa vermelha!</div>
+    <div class="message">
+        <p>Digite a senha correta para abrir o cadeado!</p>
+    </div>
+    <div class="celebration" style="display: none;">
+        <p>Parabéns! Você conseguiu abrir o cadeado! Pegue seu prêmio!</p>
+    </div>
 </div>
 
-<audio id="successSound"src="https://www.soundjay.com/button/beep-07.wav"preload="auto"></audio>
+<!-- Adicionando o efeito sonoro -->
+<audio id="successSound" src="https://youtu.be/IJzSNwzN6C4?si=1LLvaujfcLx4vMec" preload="auto"></audio>
+<audio id="errorSound" src="erro.mp3" preload="auto"></audio>
 
 <script>
-    const buttons = document.querySelectorAll('.digit-button');
-    const confirmButton = document.querySelector('.confirm-button');
-    const successMessage = document.querySelector('.success-message');
-    const lockImage = document.querySelector('.lock-image');
-    const successSound = document.getElementById('successSound');
+    let dials = document.querySelectorAll('.dial');
+    let lockCode = [5, 2, 2, 5]; // A senha será 5225
+    let userCode = [];
 
-    let userCode = [0, 0, 0, 0];
-    const correctCode = [5, 2, 2, 5];
+    dials.forEach((dial, index) => {
+        dial.addEventListener('click', () => {
+            let currentDigit = parseInt(dial.innerText);
+            currentDigit = (currentDigit + 1) % 10;  // Incrementa o número, vai de 0 a 9
+            dial.innerText = currentDigit;
 
-    buttons.forEach((button, index) => {
-        button.addEventListener('click', () => {
-            userCode[index] = (userCode[index] + 1) % 10; // Incrementa o número
-            button.textContent = userCode[index];
+            // Salva a tentativa do usuário
+            userCode[index] = currentDigit;
+
+            // Verifica se a senha está correta
+            if (userCode.toString() === lockCode.toString()) {
+                document.querySelector('.message').innerText = ''; // Remove a mensagem inicial
+                let celebrationMessage = document.querySelector('.celebration');
+                celebrationMessage.style.display = 'block'; // Mostra a mensagem de parabéns
+
+                // Toca o som de sucesso
+                let successSound = document.getElementById('successSound');
+                successSound.play();
+
+                // Remove qualquer efeito de erro anterior
+                document.querySelector('.lock-image').classList.remove('error');
+            } else {
+                // Se a senha estiver errada, aplica o efeito de erro
+                document.querySelector('.lock-image').classList.add('error');
+
+                // Toca o som de erro
+                let errorSound = document.getElementById('errorSound');
+                errorSound.play();
+            }
         });
-    });
-
-    confirmButton.addEventListener('click', () => {
-        if (userCode.toString() === correctCode.toString()) {
-            lockImage.style.display = 'none'; // Remove o cadeado fechado
-            successMessage.style.display = 'block'; // Mostra a mensagem de sucesso
-            successSound.play(); // Toca o som de vitória
-        } else {
-            // Aplica a animação de erro
-            lockImage.classList.add('error');
-            navigator.vibrate(500); // Vibra por 500ms
-            setTimeout(() => {
-                lockImage.classList.remove('error');
-            }, 500);
-        }
     });
 </script>
 
