--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -104,16 +104,11 @@
         <input type="text" maxlength="1" id="digit4" disabled>
     </div>
     <div class="button-container">
-        <button class="number-btn" data-value="1">1</button>
-        <button class="number-btn" data-value="2">2</button>
-        <button class="number-btn" data-value="3">3</button>
-        <button class="number-btn" data-value="4">4</button>
-        <button class="number-btn" data-value="5">5</button>
-        <button class="number-btn" data-value="6">6</button>
-        <button class="number-btn" data-value="7">7</button>
-        <button class="number-btn" data-value="8">8</button>
-        <button class="number-btn" data-value="9">9</button>
-        <button class="number-btn" data-value="0">0</button>
+    
+        <button class="number-cloick">0<
+        <button class="number-click">0<
+        <button class="number-click">0<
+        <button class="number-click">0<
     </div>
     <button id="confirmButton">Confirmar Senha</button>
     <div id="message" class="message"></div>
